Fix personal info name on small devices

--- a/src/styles/_personal-info.scss
+++ b/src/styles/_personal-info.scss
@@ -1,7 +1,7 @@
 .personal-info {
   &__name {
     margin: 0;
-    font-size: 1.75rem;
+    font-size: 1.65rem;
     text-transform: uppercase;
     font-weight: 300;
 
